# my_intership

./: .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  main.py  requirements.txt
app/: __init__.py  auth.py  config.py  constants.py  db.py
app/routes/: __init__.py  admin.py  public.py
app/services/: content_extractor.py  import_service.py  openrouter_service.py
app/static/: styles.css
app/templates/: 404.html
app/templates/admin/: base.html  companies_list.html  company_form.html  import_result.html  imports.html  internship_form.html  internships_list.html  login.html
app/templates/public/: application_edit.html  applications.html  base.html  catalog.html  companies.html  company_detail.html  custom_internship_form.html  detail.html  home.html
cpp_backend/: CMakeLists.txt  Makefile  README.md  internstart_cpp
cpp_backend/include/: app.hpp  controllers.hpp  database.hpp  domain.hpp  http.hpp  repositories.hpp  router.hpp  utils.hpp
cpp_backend/src/: app.cpp  controllers.cpp  database.cpp  domain.cpp  http.cpp  main.cpp  repositories.cpp  router.cpp  utils.cpp
cpp_backend/static/: styles.css
